<resources>
    <string name="app_name">HW2_Groups24</string>
    <string name="add">Add</string>
    <string name="firstTask">First Task</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="last">Last</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="priority">Priority:</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
</resources>
