<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/ibAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="11dp"
        android:contentDescription="@string/add"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/tvTaskTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ibAdd"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tvTaskDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTaskTitle"
        android:layout_toEndOf="@+id/ibFirst" />

    <TextView
        android:id="@+id/tvTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvTaskDate"
        android:layout_toStartOf="@+id/ibAdd" />

    <TextView
        android:id="@+id/tvTaskPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTaskDate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:id="@+id/tvTaskNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="131dp" />

    <ImageButton
        android:id="@+id/ibFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/tvTaskNo"
        android:layout_marginStart="19dp"
        android:layout_marginTop="39dp"
        android:contentDescription="@string/firstTask"
        app:srcCompat="@android:drawable/ic_media_rew" />

    <ImageButton
        android:id="@+id/ibPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ibFirst"
        android:layout_toEndOf="@+id/ibFirst"
        android:contentDescription="@string/previous"
        app:srcCompat="@android:drawable/ic_media_previous" />

    <ImageButton
        android:id="@+id/ibEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ibPrevious"
        android:layout_toEndOf="@+id/ibPrevious"
        android:contentDescription="@string/edit"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/ibDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ibEdit"
        android:layout_toEndOf="@+id/ibEdit"
        android:contentDescription="@string/delete"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/ibNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ibDelete"
        android:layout_toEndOf="@+id/ibDelete"
        android:contentDescription="@string/next"
        app:srcCompat="@android:drawable/ic_media_next" />

    <ImageButton
        android:id="@+id/ibLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ibNext"
        android:layout_toEndOf="@+id/ibNext"
        android:contentDescription="@string/last"
        app:srcCompat="@android:drawable/ic_media_ff" />
</RelativeLayout>